<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">



    <TextView
        android:id="@+id/resultView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        android:gravity="end|center_horizontal"
        android:padding="0dp"
        android:text="@string/resultado"
        android:textColor="@color/black"
        android:textSize="50sp"
        app:layout_constraintBottom_toTopOf="@id/buttonBorrar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/button1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        android:text="@string/boton1"
        android:gravity="center_vertical|center_horizontal"
        android:padding="0dp"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/button4"
        app:layout_constraintEnd_toStartOf="@id/button2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resultView"/>

    <Button
        android:id="@+id/button2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        android:text="@string/boton2"
        android:gravity="center_vertical|center_horizontal"
        android:padding="0dp"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/button5"
        app:layout_constraintEnd_toStartOf="@+id/button3"
        app:layout_constraintStart_toEndOf="@id/button1"
        app:layout_constraintTop_toBottomOf="@+id/resultView"/>

    <Button
        android:id="@+id/button3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        android:text="@string/boton3"
        android:gravity="center_vertical|center_horizontal"
        android:padding="0dp"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/button6"
        app:layout_constraintEnd_toStartOf="@id/buttonBorrar"
        app:layout_constraintStart_toEndOf="@id/button2"
        app:layout_constraintTop_toBottomOf="@+id/resultView"/>

    <Button
        android:id="@+id/buttonBorrar"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        android:gravity="center_vertical|center_horizontal"
        android:padding="0dp"
        android:text="@string/botonBorrar"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/buttonMultiplicar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/button3"
        app:layout_constraintTop_toBottomOf="@+id/resultView" />

    <Button
        android:id="@+id/button4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        android:text="@string/boton4"
        android:gravity="center_vertical|center_horizontal"
        android:padding="0dp"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/button7"
        app:layout_constraintEnd_toStartOf="@id/button5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button1"/>

    <Button
        android:id="@+id/button5"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        android:text="@string/boton5"
        android:gravity="center_vertical|center_horizontal"
        android:padding="0dp"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/button8"
        app:layout_constraintEnd_toStartOf="@id/button6"
        app:layout_constraintStart_toEndOf="@id/button4"
        app:layout_constraintTop_toBottomOf="@+id/button1"/>

    <Button
        android:id="@+id/button6"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        android:text="@string/boton6"
        android:gravity="center_vertical|center_horizontal"
        android:padding="0dp"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/button9"
        app:layout_constraintEnd_toStartOf="@id/buttonSuma"
        app:layout_constraintStart_toEndOf="@id/button5"
        app:layout_constraintTop_toBottomOf="@+id/button3"/>


    <Button
        android:id="@+id/buttonResta"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        android:text="@string/botonResta"
        android:gravity="center_vertical|center_horizontal"
        android:padding="0dp"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/buttonSuma"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.473"
        app:layout_constraintStart_toEndOf="@id/button6"
        app:layout_constraintTop_toBottomOf="@+id/buttonMultiplicar" />

    <Button
        android:id="@+id/button7"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        android:text="@string/boton7"
        android:gravity="center_vertical|center_horizontal"
        android:padding="0dp"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/button0"
        app:layout_constraintEnd_toStartOf="@id/button8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button4"/>

    <Button
        android:id="@+id/button8"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        android:text="@string/boton8"
        android:gravity="center_vertical|center_horizontal"
        android:padding="0dp"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/button0"
        app:layout_constraintEnd_toStartOf="@id/button9"
        app:layout_constraintStart_toEndOf="@id/button7"
        app:layout_constraintTop_toBottomOf="@+id/button5"/>

    <Button
        android:id="@+id/button9"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        android:text="@string/boton9"
        android:gravity="center_vertical|center_horizontal"
        android:padding="0dp"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/button0"
        app:layout_constraintEnd_toStartOf="@id/buttonIgual"
        app:layout_constraintStart_toEndOf="@id/button8"
        app:layout_constraintTop_toBottomOf="@+id/button6"/>
    <Button
        android:id="@+id/buttonSuma"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        android:text="@string/botonSuma"
        android:gravity="center_vertical|center_horizontal"
        android:padding="0dp"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/buttonIgual"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/button6"
        app:layout_constraintTop_toBottomOf="@+id/buttonResta"/>

    <Button
        android:id="@+id/buttonIgual"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        android:textSize="40sp"
        android:text="@string/botonIgual"
        android:gravity="center_vertical|center_horizontal"
        android:padding="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/button9"
        app:layout_constraintTop_toBottomOf="@+id/buttonSuma"/>


    <Button
        android:id="@+id/button0"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        android:gravity="center_vertical|center_horizontal"
        android:padding="0dp"
        android:text="@string/boton0"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/buttonIgual"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button8"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <Button
        android:id="@+id/buttonMultiplicar"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        android:padding="0dp"
        android:text="@string/botonMultiplicacion"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@id/buttonResta"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/button3"
        app:layout_constraintTop_toBottomOf="@id/buttonBorrar"/>


</androidx.constraintlayout.widget.ConstraintLayout>